--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,8 @@
   <title></title>
 </head>
 <body>
-
+  <div id="app"></div>
   <script src="components/react/react.min.js"></script>
-  <!-- build:js -->
-  <script src="js/App.js"></script>
-  <!-- endbuild -->
+  <script src="build/build.min.js"></script>
 </body>
 </html>
