--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
 <body>
   <div id="app"></div>
   <script src="components/react/react.min.js"></script>
-  <script src="build/build.min.js"></script>
+  
+  <!-- build:js -->
+  <script src="src/build.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
