--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>foodieRoulette</title>
+  <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+  <div id="fb-root"></div>
   <div id="app"></div>
-  <script src="components/react/react.min.js"></script>
+  <script src="components/react/react.js"></script>
   <script src="components/react-router/build/umd/ReactRouter.min.js"></script>
-  
+  <script src="components/react-bootstrap/react-bootstrap.min.js"></script>
   
   <!-- build:js -->
   <script src="src/build.js"></script>
+
   <!-- endbuild -->
 </body>
 </html>
