Comment all the things

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 
-  <title>Foodie Roulette</title>
+  <title>Nibbler</title>
   <!-- <link rel="shortcut icon" href="myIcon.ico" type="image/x-icon" /> -->
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.8/slick.css"/>
