--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 
   <title>Nibbler</title>
   <!-- <link rel="shortcut icon" href="myIcon.ico" type="image/x-icon" /> -->
